<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Live Forever</string>

    <!-- toasts -->
    <string name="bp_success">Blood pressure entry created!</string>
    <string name="weight_success">Weight entry created!</string>
    <string name="exercise_success">Exercise entry created!</string>
    <string name="error_gender">Please select a gender.</string>
    <string name="error_entire_form">Please fill out the entire sign-up form.</string>
    <string name="error_form_fields">Please fill out all form fields.</string>

    <!-- welcome_layout -->
    <string name="welcome">Welcome to</string>
    <string name="instructions">It seems this is your first time using the app. Hit the button below to begin.</string>
    <string name="sign_up_button">Sign Up</string>

    <!-- sign_up_layout -->
    <string name="ev_signup_name">Your name</string>
    <string name="ev_signup_address">Your address</string>
    <string name="ev_signup_phone">Your phone number</string>

    <string name="ev_signup_emerg_name">Emergency contact\'s name</string>
    <string name="ev_signup_emerg_address">Emergency contact\'s address</string>
    <string name="ev_signup_emerg_phone">Emergency contact\'s number</string>

    <string name="btn_signup">Sign up!</string>

    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>

    <!-- dashboard_layout -->
    <string name="graph_weight_name">Weight Graph</string>
    <string name="graph_bp_name">Blood Pressure Graph</string>
    <string name="dashboard_msg">What would you like to do today ?</string>
    <string name="main_menu">Main Menu</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_settings">Settings</string>
    <string name="header_bp">Blood Pressure</string>
    <string name="header_weight">Weight</string>
    <string name="header_exercise">Exercise</string>

    <string name="you_are">You are:</string>
    <string name="your_emerg">Your emergency contact:</string>

    <string name="dash_record">+</string>
    <string name="dash_graph">View Graph</string>
    <string name="dash_analytics">View Analytics</string>

    <string name="data_bp">Enter your current blood pressure</string>
    <string name="systolic">Systolic Pressure</string>
    <string name="diastolic">Diastolic Pressure</string>
    <string name="pulse_rate">Heart rate</string>
    <string name="submit_bp">Submit</string>

    <string name="data_exercise">Enter your last exercise</string>
    <string name="exercise_type">Type</string>
    <string name="exercise_duration">Duration</string>
    <string name="exercise_intensity">Intensity</string>
    <string name="submit_exercise">Submit</string>
    <string name="menu_genBP">Generate Blood Pressure data</string>

    <string name="data_weight">Enter your current weight</string>
    <string name="weight_info">Weight in Pounds</string>
    <string name="submit_weight">Submit</string>

    <string name="menu_genUser">Generate User</string>
    <string name="menu_yes">Yes please!</string>
    <string name="menu_no">No thanks.</string>

    <string name="action_show30Days">Show last 30 days</string>
    <string name="action_showAll">Show all time</string>

    <string name="menu_genWeight">Generate Weight Data</string>
    <string name="action_genBP">Do you want to generate dummy blood pressure data?</string>
    <string name="action_genWeight">Do you want to generate dummy weight data?</string>
    <string name="action_genUser">Do you want to generate a dummy user?</string>
    <string name="action_deleteUser">Delete User</string>
    <string name="action_deleteDialogMsg">Are you sure you want to delete the user? All data will be deleted.</string>
    <string name="action_deleteYes">Delete me!</string>
    <string name="action_deleteNo">Nevermind.</string>
    <string name="menu_genExer">Generate Exercise Data</string>
    <string name="action_genExer">Do you want to generate dummy exercise data?</string>


    <string-array name="record_bp_spinner">
        <item>Cardio</item>
        <item>Stength</item>
    </string-array>

</resources>
