<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:id="@+id/TVwelcomeText" android:layout_gravity="center" android:textSize="20dp"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/TVappName" android:layout_gravity="center" android:textSize="30dp"
            android:textColor="#feff38" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:id="@+id/TVinstructions" android:layout_gravity="center_horizontal" android:textStyle="italic"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"
            android:id="@+id/btn_signup" android:layout_gravity="center" android:onClick="toSignUp"/>
</LinearLayout>

