<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <EditText
            android:id="@+id/exercise_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/exercise_duration"
            android:layout_below="@+id/exercise_msg"
            android:layout_marginTop="42dp"
            android:ems="10"
            android:hint="@string/exercise_type" />

    <EditText
            android:id="@+id/exercise_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/exercise_intensity"
            android:layout_alignLeft="@+id/exercise_intensity"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/exercise_duration" />

    <EditText
            android:id="@+id/exercise_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/exercise_msg"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/exercise_intensity" />

    <TextView
            android:id="@+id/exercise_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp"
            android:text="@string/exercise_msg" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exercise_intensity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/submit_exercise" />
</RelativeLayout>